添加新样式

--- a/style.css
+++ b/style.css
@@ -19,4 +19,15 @@
 {
 	color: #ccc;
 }
+
+.reply
+{
+	margin: 4px auto;
+	width: 50%;
+	height: 22px;
+	line-height: 22px;
+	text-align: left;
+	border: 1px solid #ccc;
+	border-radius:3px;
+}
 </style>
